before creating guards for auth

--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -21,6 +21,10 @@
     box-sizing: border-box;
 }
 
+div.InputElement {
+    border:none;
+}
+
 .InputElement:focus {
     outline: none;
     background-color: #ccc;
